# ccpp_unit_test

./: CMakeLists.txt  README.md
libbar/: CMakeLists.txt  bar.cpp  bar.h
libfoo/: CMakeLists.txt  foo.cpp  foo.h  ibar.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/testfoo/: CMakeLists.txt  main.cpp  mockbar.h  testfoo.cpp  testfoo.h
